# bep-rs

./: .gitignore  .woodpecker.yml  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: rust.yml
doc/: reference.md  refernce.md
migrations/2023-01-19-192037_create_directories/: down.sql  up.sql
src/: bep_state.rs  bep_state_reference.rs  commands.rs  daemon.rs  device_id.rs  items.proto  items.rs  lib.rs  models.rs  peer_connection.rs  peer_connection_inner.rs  schema.rs  server.rs  storage_backend.rs  sync_directory.rs  util.rs
src/peer_connection/: error.rs  handlers.rs  items.proto  items.rs  mod.rs  peer_connection_inner.rs  verifier.rs  watcher.rs
tests/: peer_connection.rs
