[package]
name = "beercanlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["sqlite"] }
diesel_migrations = "2.0.0"
tokio = { version = "1", features = ["full", "tracing"] }
rand = "0.8.5"
rustls = "0.20.8"
prost = "0.11"
prost-types = "0.11"
log = "0.4"
env_logger = "0.10.0"
futures = "0.3.27"
console-subscriber = "0.1.8"
tempfile = "3.4.0"
ring = "0.16.20"

[build-dependencies]
prost-build = "0.11"
