[package]
name = "bep-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.0.0"
tokio = { version = "1", features = ["full", "tracing"] }
rand = "0.9.0"
prost = "0.11"
prost-types = "0.11"
log = "0.4"
env_logger = "0.10.0"
futures = "0.3.27"
console-subscriber = "0.1.8"
tempfile = "3.4.0"
ring = "0.16.20"
rcgen = "0.10.0"
tokio-rustls = { version = "0.24.0", features = ["dangerous_configuration"] }
thiserror = "2.0.6"
data-encoding = "2.6.0"
tokio-util = { version = "0.7.13", features = ["rt"] }
lz4_flex = "0.11.3"
notify = "7.0.0"
async-trait = "0.1.88"

[build-dependencies]
prost-build = "0.11"
